fix mobile spacing

--- a/src/templates/Blog.css
+++ b/src/templates/Blog.css
@@ -15,7 +15,6 @@
 .Blog_container h4,
 .Blog_container h5,
 .Blog_container hr,
-.Blog_container .gatsby-highlight,
 .Blog_container ul {
   max-width: 700px;
   margin-left: auto;
@@ -254,6 +253,12 @@ pre {
 }
 
 @media (min-width: 768px) {
+  .Blog_container .gatsby-highlight {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .Blog_heading h1 {
     font-size: 2.75rem;
   }
